--- a/index.html
+++ b/index.html
@@ -8,38 +8,19 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="any">
 </head>
 <body>
-    <header>
-        <div class="get-started">Get started by editting <b>index.html</b></div>
-        <img class="logo" src="images/logo.svg" alt="Main Logo">
-    </header>
+    
+    <main class="card-container">
+        <article class="card">
+            <img src="./images/cactus_img.jpg" width="200px" alt="Cactus Image" class="card-image">
 
-    <main>
-        <img src="images/devchallenges-logo.svg" alt="A beautiful landscape">
-        <h3 class="title">Responsive Web Developer Starter</h3>
+            <h1 class="card-title">Embracing Minimalism</h1>
+            <p class="card-paraph">From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity</p>
+
+            <hr class="card-separator">
+
+            <span class="card-author">Annie Spratt</span>
+        </article>
     </main>
-
-    <footer>
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Challenges</div>
-            <div class="link-description">Choose a challenge and start learning by building real-life projects.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/challenges" target="_blank">
-            <div class="link-title">Solutions</div>
-            <div class="link-description">Checkout how orders solve the challenges, compare with yours and give them feedback.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Blogs</div>
-            <div class="link-description">Checkout devchallenges blogs, tutorials, updates. Find useful resources to get you started.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Deploy</div>
-            <div class="link-description">How to deploy and submit your solution.</div>
-        </a>
-       
-    </footer>
 
     <script src="script.js"></script>
 </body>
