--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     
     <main class="card-container">
         <article class="card">
-            <img src="./images/cactus_img.jpg" width="200px" alt="Cactus Image" class="card-image">
+            <img src="./images/cactus_img.jpg" alt="Cactus Image" class="card-image">
 
-            <h1 class="card-title">Embracing Minimalism</h1>
-            <p class="card-paraph">From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity</p>
+            <span class="card-tag">Design</span>
+            <div class="card-body">
+                <h1 class="card-title">Embracing Minimalism</h1>
+                <p class="card-paraph">From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity</p>
 
-            <hr class="card-separator">
+                <hr class="card-separator" />
 
-            <span class="card-author">Annie Spratt</span>
+                <small class="card-author">Annie Spratt</small>
+            </hr>
         </article>
     </main>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
